[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markqt"
version = "0.1.0"
description = "Markdown-ish renderer thing"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Your Name", email="you@example.com" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]